# experiments_in_conversation_Michael_Levin

./: .gitignore  .gitlab-ci.yml  .uv.toml  ARCHITECTURE.md  DESIGN_DOCUMENT.md  PIPELINE_EVOLUTION_PLAN.md  QUICKSTART.md  README.md  SCIENTIFIC_PUBLICATIONS_PIPELINE.md  WEBHOOK_SETUP_GUIDE.md  check_streamlit_index.py  debug_search_issue.py  packages.txt  poetry.toml  pyproject.toml  requirements.txt  requirements_streamlit.txt  restore_final_half.py  retrieve_completed_transcripts.py  run_scientific_publications_pipeline.py  step_04_extract_chunks.py  streamlit_app.py  webhook_server.py  youtube_howto_compiled.py
.cold_storage/: youtube_playlist.txt
SCIENTIFIC_PUBLICATION_PIPELINE/: README.md  pipeline_progress_queue.json  pipeline_progress_queue.py  restore_progress_queue.py  run_pipeline.py  step_01_unique_hashcode_validator.py  step_02_metadata_extractor.py  step_03_text_extractor.py  step_04_optional_metadata_enrichment.py  step_05_semantic_chunker_split.py  step_06_batch_embedding.py  step_06_consolidated_embedding.py  step_07_move_to_archive.py
SCIENTIFIC_PUBLICATION_PIPELINE/step_02_metadata/: 036f6305_20250814_084714_387_metadata.json  09432ed9_20250814_084714_388_metadata.json  0be3ac7a_20250814_084714_390_metadata.json  0bfa7089_20250814_131547_916_metadata.json  1122940d_20250814_131546_592_metadata.json  1232ec9d_20250814_131548_364_metadata.json  198bbe9d_20250814_084714_392_metadata.json  1fd74856_20250814_084714_389_metadata.json  290628e7_20250814_131546_625_metadata.json  2bb2c0c6_20250814_131547_692_metadata.json  2dd32606_20250814_084714_381_metadata.json  312e85a1_20250814_131548_287_metadata.json  505047db_20250814_131548_186_metadata.json  5ae551d6_20250814_131547_404_metadata.json  7938abb5_20250814_131546_718_metadata.json  7d121587_20250813_191420_609_metadata.json  80f97876_20250814_084714_391_metadata.json  8ae72b4a_20250814_131547_174_metadata.json  8f3d5096_20250814_084714_405_metadata.json  aa24e1f5_20250814_131547_608_metadata.json  ae0d6436_20250814_131546_977_metadata.json  b5a775a0_20250814_084714_407_metadata.json  c053f9cc_20250814_131547_905_metadata.json  cd4a7476_20250814_131547_821_metadata.json  d528e385_20250814_131546_534_metadata.json  d8fead4e_20250814_084714_409_metadata.json  fff45c04_20250814_131546_958_metadata.json
SCIENTIFIC_PUBLICATION_PIPELINE/step_03_extracted_text/: 036f6305_20250814_084714_387_extracted_text.txt  09432ed9_20250814_084714_388_extracted_text.txt  0be3ac7a_20250814_084714_390_extracted_text.txt  0bfa7089_20250814_131547_916_extracted_text.txt  1122940d_20250814_131546_592_extracted_text.txt  1232ec9d_20250814_131548_364_extracted_text.txt  198bbe9d_20250814_084714_392_extracted_text.txt  1fd74856_20250814_084714_389_extracted_text.txt  290628e7_20250814_131546_625_extracted_text.txt  2bb2c0c6_20250814_131547_692_extracted_text.txt  2dd32606_20250814_084714_381_extracted_text.txt  312e85a1_20250814_131548_287_extracted_text.txt  505047db_20250814_131548_186_extracted_text.txt  5ae551d6_20250814_131547_404_extracted_text.txt  7938abb5_20250814_131546_718_extracted_text.txt  7d121587_20250813_191420_609_extracted_text.txt  80f97876_20250814_084714_391_extracted_text.txt  8ae72b4a_20250814_131547_174_extracted_text.txt  8f3d5096_20250814_084714_405_extracted_text.txt  aa24e1f5_20250814_131547_608_extracted_text.txt  ae0d6436_20250814_131546_977_extracted_text.txt  b5a775a0_20250814_084714_407_extracted_text.txt  c053f9cc_20250814_131547_905_extracted_text.txt  cd4a7476_20250814_131547_821_extracted_text.txt  d528e385_20250814_131546_534_extracted_text.txt  d8fead4e_20250814_084714_409_extracted_text.txt  fff45c04_20250814_131546_958_extracted_text.txt
SCIENTIFIC_PUBLICATION_PIPELINE/step_05_semantic_chunks/: 036f6305_20250814_084714_387_chunks.json  09432ed9_20250814_084714_388_chunks.json  0be3ac7a_20250814_084714_390_chunks.json  0bfa7089_20250814_131547_916_chunks.json  1122940d_20250814_131546_592_chunks.json  1232ec9d_20250814_131548_364_chunks.json  198bbe9d_20250814_084714_392_chunks.json  1fd74856_20250814_084714_389_chunks.json  290628e7_20250814_131546_625_chunks.json  2bb2c0c6_20250814_131547_692_chunks.json  2dd32606_20250814_084714_381_chunks.json  312e85a1_20250814_131548_287_chunks.json  505047db_20250814_131548_186_chunks.json  5ae551d6_20250814_131547_404_chunks.json  7938abb5_20250814_131546_718_chunks.json  7d121587_20250813_191420_609_chunks.json  80f97876_20250814_084714_391_chunks.json  8ae72b4a_20250814_131547_174_chunks.json  8f3d5096_20250814_084714_405_chunks.json  aa24e1f5_20250814_131547_608_chunks.json  ae0d6436_20250814_131546_977_chunks.json  b5a775a0_20250814_084714_407_chunks.json  c053f9cc_20250814_131547_905_chunks.json  cd4a7476_20250814_131547_821_chunks.json  d528e385_20250814_131546_534_chunks.json  d8fead4e_20250814_084714_409_chunks.json  fff45c04_20250814_131546_958_chunks.json
SCIENTIFIC_VIDEO_PIPELINE/Conversations_and_working_meetings_1_on_0/: step_05_frame_extractor.py
SCIENTIFIC_VIDEO_PIPELINE/Conversations_and_working_meetings_1_on_1/: README.md  SPEAKER_IDENTIFICATION_SYSTEM.md  gemini_generated_prompts.json  generate_gemini_prompts.py  logging_config.py  run_conversations_pipeline.py  step_01_playlist_processor.py  step_02_video_downloader.py  step_03_transcription_webhook.py  step_08_cleanup.py  (+4 more)
configs/: settings.py
docs/: CONVERSATION_MEMORY_FEATURES.md  DOCUMENTATION_COMPLETE.md  FILE_ORGANIZATION.md  IMPLEMENTATION_PLAN.md  PIPELINE_OVERVIEW.md  PIPELINE_STANDARDIZATION_STATUS.md  PIPELINE_SUMMARY.md  README.md  TECHNICAL_ARCHITECTURE.md
example from other project that did build streamlit ok/: pyproject.toml
examples/: enhance_conversation_rag_chunks.py  label_and_prepare_conversation_chunks.py
media_pipelines/: README.md
tools/: embed_all_processed_chunks.py
utils/: README.md  base_frame_chunk_aligner.py  conversations_aligner_example.py  conversations_pipeline_demo.py  pipeline_data_models.py
(+1937 files in other folders)
