[project]
name = "virtual-person-pipeline"
version = "0.1.0"
description = "AI-powered system that creates a digital twin of an individual through RAG and fine-tuning"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Core AI and ML libraries
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "transformers>=4.36.2",
    "torch>=2.1.2",
    "accelerate>=0.25.0",
    # Vector databases and embeddings
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "openai>=1.6.1",
    # Document processing
    "pypdf2>=3.0.1",
    "python-pptx>=0.6.23",
    "pytesseract>=0.3.10",
    "pillow>=10.1.0",
    "opencv-python>=4.8.1.78",
    # Audio and video processing
    "speechrecognition>=3.10.0",
    "pydub>=0.25.1",
    "moviepy>=1.0.3",
    # Web framework and UI
    "streamlit>=1.29.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    # Data processing and utilities
    "pandas>=2.1.4",
    "numpy>=1.24.4",
    "scikit-learn>=1.3.2",
    "nltk>=3.8.1",
    # Database and storage
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    # Configuration and environment
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    # Monitoring and logging
    "loguru>=0.7.2",
    "prometheus-client>=0.19.0",
    # Utilities
    "tqdm>=4.66.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "google-generativeai>=0.8.5",
    "pypdf>=6.0.0",
    "requests>=2.32.4",
    "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.1",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["SCIENTIFIC_PUBLICATION_PIPELINE"]

[tool.poetry]
package-mode = false
name = "virtual-person-pipeline"
version = "0.1.0"
description = "AI-powered system that creates a digital twin of an individual through RAG and fine-tuning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = []
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
